    and height by itself
  - added EditBox
  - added CheckBox
  - fixed some bugs
  - added a help string which can be assigned to a widget. Whenever F1 is
    pressed the current widget will popup a message box and show that help
    text in it. If the widget which currently possesses the focus does not
    have a help string the parents will be consulted.


2004/06/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - nearly completed MessageBox
  - reworked XML->text parsing of TextWidget
  - close events do now work
  - provide more control over event handling for applications


2004-06-24   Christian Stimming <stimming@tuhh.de>

	* configure.ac, src/Makefile.am: Make the compilation of the UI
	module conditional on whether ncurses is available. If it is not
	there, then the whole GWEN_UI module will neither be compiled nor
	installed.


2004/06/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: 
  - added Close-events
  - added ScrollWidget (which basically is a widget with optional vertical
    and horizontal scroll bars)
  - started working on GWEN_MessageBox


2004/06/23: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: added Button and a command event emitted by buttons (or menus later)
  This will allow me to create a Message class and a TextBrowser module
  tomorrow (hopefully).


2004/06/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: added VSlider, fixed many bugs in UI code etc. It is still slow
  but now it works ;-) I will have to optimize later...


2004/06/20: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- started working on a ncurses GUI which will be used by Libchipcard's setup
  tools and maybe by AqMoney2...


2004/06/17: Martin Preuss<martin@libchipcard.de>
------------------------------------------------