@@ -1462,18 +1462,18 @@ int uitest5(int argc, char **argv) {
   GWEN_UI_RESULT res;
   unsigned char buffer[]=
     "<gwen>"
-    "<i>This</i> is a <b>test</b><br/>"
-    "And <strong>this here</strong>, tooAnd this line<br/>"
-    "is as good as a test<br/>"
-    "as the lines<br/>"
-    "above this one<br/>"
-    "<br/>"
-    "Well, I need to fill<br/>"
-    "this <b>space</b> here<br/>"
-    "but with what ?<br/>"
-    "Hmm, but I think...<br/>"
-    "this might be enough<br/>"
-    "At least now ;-)<br/>"
+    "<i>This</i> is a <b>test</b><br>"
+    "And <strong>this here</strong>, tooAnd this line<br>"
+    "is as good as a test<br>"
+    "as the lines<br>"
+    "above this one<br>"
+    "<br>"
+    "Well, I need to fill<br>"
+    "this <b>space</b> here<br>"
+    "but with what ?<br>"
+    "Hmm, but I think...<br>"
+    "this might be enough<br>"
+    "At least now ;-)<br>"
     "</gwen>";
 
   GWEN_Logger_Open(0, "test", "gwentest.log",
@@ -1520,18 +1520,18 @@ int uitest6(int argc, char **argv) {
   GWEN_UI_RESULT res;
   unsigned char buffer[]=
     "<gwen>"
-    "<i>This</i> is a <b>test</b><br/>"
-    "And <strong>this here</strong>, tooAnd this line<br/>"
-    "is as good as a test<br/>"
-    "as the lines<br/>"
-    "above this one<br/>"
-    "<br/>"
-    "Well, I need to fill<br/>"
-    "this <b>space</b> here<br/>"
-    "but with what ?<br/>"
-    "Hmm, but I think...<br/>"
-    "this might be enough<br/>"
-    "At least now ;-)<br/>"
+    "<i>This</i> is a <b>test</b><br>"
+    "And <strong>this here</strong>, tooAnd this line<br>"
+    "is as good as a test<br>"
+    "as the lines<br>"
+    "above this one<br>"
+    "<br>"
+    "Well, I need to fill<br>"
+    "this <b>space</b> here<br>"
+    "but with what ?<br>"
+    "Hmm, but I think...<br>"
+    "this might be enough<br>"
+    "At least now ;-)<br>"
     "</gwen>";
 
   GWEN_Logger_Open(0, "test", "gwentest.log",
@@ -1592,18 +1592,18 @@ int uitest7(int argc, char **argv) {
   GWEN_TW_LINE *tl;
   unsigned char buffer[]=
     "<gwen>"
-    "<i>This</i> is a <b>test</b><br/>"
-    "And <strong>this here</strong>, tooAnd this line<br/>"
-    "is as good as a test<br/>"
-    "as the lines<br/>"
-    "<i>above</i> this one<br/>"
-    "<br/>"
-    "Well, I need to fill<br/>"
-    "this <b>space</b> here<br/>"
-    "but with what ?<br/>"
-    "Hmm, but I think...<br/>"
-    "this might be enough<br/>"
-    "At least now ;-)<br/>"
+    "<i>This</i> is a <b>test</b><br>"
+    "And <strong>this here</strong>, tooAnd this line<br>"
+    "is as good as a test<br>"
+    "as the lines<br>"
+    "<i>above</i> this one<br>"
+    "<br>"
+    "Well, I need to fill<br>"
+    "this <b>space</b> here<br>"
+    "but with what ?<br>"
+    "Hmm, but I think...<br>"
+    "this might be enough<br>"
+    "At least now ;-)<br>"
     "</gwen>";
 
   GWEN_Logger_Open(0, "test", "gwentest.log",
@@ -2227,19 +2227,19 @@ int uitest14(int argc, char **argv) {
   int i, j;
   unsigned char buffer[]=
     "<gwen>"
-    "<i>This</i> is a <b>test</b><br/>"
-    "And <strong>this here</strong>, tooAnd this line<br/>"
-    "is as good as a test<br/>"
-    "as the lines<br/>"
-    "<i>above</i> this one<br/>"
-    "<br/>"
-    "Well, I need to fill<br/>"
-    "this <b>space</b> here<br/>"
-    "but with what ?<br/>"
-    "Hmm, but I think...<br/>"
-    "this might be enough<br/>"
-    "At least now ;-)<br/>"
-    "Ok, <i>one</i> more ;-)<br/>"
+    "<i>This</i> is a <b>test</b><br>"
+    "And <strong>this here</strong>, tooAnd this line<br>"
+    "is as good as a test<br>"
+    "as the lines<br>"
+    "<i>above</i> this one<br>"
+    "<br>"
+    "Well, I need to fill<br>"
+    "this <b>space</b> here<br>"
+    "but with what ?<br>"
+    "Hmm, but I think...<br>"
+    "this might be enough<br>"
+    "At least now ;-)<br>"
+    "Ok, <i>one</i> more ;-)<br>"
     "Annnnd another one..."
     "</gwen>";
 
@@ -2495,10 +2495,10 @@ int uitest16(int argc, char **argv) {
   GWEN_Widget_SetHelpText(mw,
                           "<gwen>"
                           "This is a small <b>example</b> <i>of</i> a help "
-                          "screen.<br/>"
-                          "You can assign a help text to any widget.<br/>"
-                          "<br/>"
-                          "If no help text for a widget is available<br/>"
+                          "screen.<br>"
+                          "You can assign a help text to any widget.<br>"
+                          "<br>"
+                          "If no help text for a widget is available<br>"
                           "all parents are consulted."
                           "</gwen>");
 
